--- a/app/templates/addEdit.html
+++ b/app/templates/addEdit.html
@@ -3,33 +3,49 @@
 
 {% extends "base.html" %}
 
-{% block title %}
-    {{ operation }} {{ modelName }}
-{% endblock %}
+{% block title %}{{ operation }} {{ modelName }}{% endblock %}
 
 {% block page_content %}
-{% if breadcrumbs %}
-    {{ breadcrumb(breadcrumbs) }}
-{% endif %}
-<div class = "page-header">
-    <h1>{{ operation }} <small>{{ modelName }}</small></h1>
-</div>
-<div>
-    {{ wtf.quick_form(form) }}
-</div>
+    {% if breadcrumbs %}
+        {{ breadcrumb(breadcrumbs) }}
+    {% endif %}
+    <div class = "page-header">
+        <h1>{{ operation }} <small>{{ modelName }}</small></h1>
+    </div>
+    <div>
+        {{ wtf.quick_form(form) }}
+    </div>
 {% endblock %}
 
 {% block scripts %}
     {{ super() }}
+    {% block setTabIndex %}
+        <script>
+            function setTabIndex()
+            {
+                var tabIndex = 1
+                $("form.form > div > input,select,form.form > div > label > input,textarea,#buttonSave").each(function()
+                {
+                    tabIndex = tabIndex + 1
+                    $(this).attr("tabindex", tabIndex)
+                })
+
+                $($("ol.breadcrumb > li:not(.active) > a").get().reverse()).each(function()       
+                {
+                    tabIndex = tabIndex + 1
+                    $(this).attr("tabindex", tabIndex)
+                })
+            }
+        </script>
+    {% endblock %}
     <script>
         $(document).ready(function()
         {
-            $(".form-control").first().focus()
-
-            $("#submit").hide()
-
             $("#submit").parent().append("<button class = \"btn btn-default\" id = \"buttonSave\" title = \"Save\" type = \"submit\">" +
                 "<span class = \"glyphicon glyphicon-floppy-disk\" aria-hidden = \"true\"></span></button>")
+            $("#submit").hide()
+            setTabIndex()
+            $(".form-control").first().focus()
         })
     </script>
 {% endblock %}
