--- a/app/templates/eventFrames/overlayBuilder.html
+++ b/app/templates/eventFrames/overlayBuilder.html
@@ -2,93 +2,91 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}
-Event Frames
-{% endblock %}
+{% block title %}Event Frames{% endblock %}
 
 {% block page_content %}
-<div>
-    <ol class = "breadcrumb">
-        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></a></li>
-        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-            selectedId = eventFrameTemplate.ElementTemplate.Site.Enterprise.id()) }}">{{ eventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</a></li>
-        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-            selectedId = eventFrameTemplate.ElementTemplate.Site.id()) }}">{{ eventFrameTemplate.ElementTemplate.Site.Name }}</a></li>
-        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-            selectedId = eventFrameTemplate.ElementTemplate.id()) }}">{{ eventFrameTemplate.ElementTemplate.Name }}</a></li>
-        <li class = "active">{{ eventFrameTemplate.Name }}</li>
-        {% if startTimestamp and endTimestamp %}
-            <li class = "active">{{ moment(startTimestamp).format("YYYY-MM-DD HH:mm:ss") }} - {{ moment(endTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</li>
-        {% endif %}
-    </ol>
-</div>
-<div class = "page-header">
-        <h1>Event Frames<small> Overlay</small></h1>
-</div>
-{% if form %}
     <div>
-        <button class = "btn btn-primary" id = "buttonMonthPicker1" data-months = "1" title = "1 Month">1 Mo</button>
-        <button class = "btn btn-primary" id = "buttonMonthPicker2" data-months = "2" title = "2 Months">2 Mo</button>
-        <button class = "btn btn-primary" id = "buttonMonthPicker3" data-months = "3" title = "3 Months">3 Mo</button>
-        <button class = "btn btn-primary" id = "buttonMonthPicker6" data-months = "6" title = "6 Months">6 Mo</button>
-        <button class = "btn btn-primary" id = "buttonMonthPicker9" data-months = "9" title = "9 Months">9 Mo</button>
-        <button class = "btn btn-primary" id = "buttonMonthPicker12" data-months = "12" title = "1 Year">1 Yr</button>
+        <ol class = "breadcrumb">
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+                selectedId = eventFrameTemplate.ElementTemplate.Site.Enterprise.id()) }}'>{{ eventFrameTemplate.ElementTemplate.Site.Enterprise.Name }}</a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
+                selectedId = eventFrameTemplate.ElementTemplate.Site.id()) }}'>{{ eventFrameTemplate.ElementTemplate.Site.Name }}</a></li>
+            <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
+                selectedId = eventFrameTemplate.ElementTemplate.id()) }}'>{{ eventFrameTemplate.ElementTemplate.Name }}</a></li>
+            <li class = "active">{{ eventFrameTemplate.Name }}</li>
+            {% if startTimestamp and endTimestamp %}
+                <li class = "active">{{ moment(startTimestamp).format("YYYY-MM-DD HH:mm:ss") }} - {{ moment(endTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</li>
+            {% endif %}
+        </ol>
     </div>
-    <div>
-        {{ wtf.quick_form(form) }}
+    <div class = "page-header">
+            <h1>Event Frames<small> Overlay</small></h1>
     </div>
-{% else %}
-    <a class = "btn btn-default" id = "buttonEventFrameOverlay" title = "Grafana"><span class = "glyphicon glyphicon-stats"></span></a>
-    <br><br>
-    <div>
-        Toggle Column:
-        <button type = "button" class = "btn btn-primary btn-xs" id = "buttonHideAllColumns">Hide All</button>
-        {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
-            {% set dataColumnIndex = loop.index + 4 %}
-            <button type = "button" class = "btn btn-primary btn-xs" data-columnIndex = "{{ dataColumnIndex }}"
-                id = "buttonToggleColumn{{ eventFrameAttributeTemplate.Name }}">{{ eventFrameAttributeTemplate.Name }}</button>
-        {% endfor %}
-        <button type = "button" class = "btn btn-primary btn-xs" id = "buttonShowAllColumns">Show All</button>
+    {% if form %}
+        <div>
+            <button class = "btn btn-primary" id = "buttonMonthPicker1" data-months = "1" title = "1 Month">1 Mo</button>
+            <button class = "btn btn-primary" id = "buttonMonthPicker2" data-months = "2" title = "2 Months">2 Mo</button>
+            <button class = "btn btn-primary" id = "buttonMonthPicker3" data-months = "3" title = "3 Months">3 Mo</button>
+            <button class = "btn btn-primary" id = "buttonMonthPicker6" data-months = "6" title = "6 Months">6 Mo</button>
+            <button class = "btn btn-primary" id = "buttonMonthPicker9" data-months = "9" title = "9 Months">9 Mo</button>
+            <button class = "btn btn-primary" id = "buttonMonthPicker12" data-months = "12" title = "1 Year">1 Yr</button>
+        </div>
+        <div>
+            {{ wtf.quick_form(form) }}
+        </div>
+    {% else %}
+        <a class = "btn btn-default" id = "buttonEventFrameOverlay" title = "Grafana"><span class = "glyphicon glyphicon-stats"></span></a>
         <br><br>
-    </div>
-    <div id = "divLoading" class = "text-center">
-        <img src = '{{ url_for("static", filename = "images/loading.gif") }}'>
-    </div>
-    <div>
-        <table id = "table" class = "table table-hover" style = "display:none">
-            <thead>
-                <tr>
-                    <th>Event Frame Id</th>
-                    <th>Name</th>
-                    <th>Element</th>
-                    <th id = "thStartTimestamp">Start</th>
-                    <th id = "thEndTimestamp">End</th>
-                    {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
-                        <th>{{ eventFrameAttributeTemplate.Name }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for eventFrame in eventFrames %}
-                    <tr class = "trEventFrame" eventFrameId = "{{ eventFrame.EventFrameId }}">
-                        <td>{{ eventFrame.EventFrameId }}</td>
-                        <td>{{ eventFrame.Name }}</td>
-                        <td>{{ eventFrame.ElementName }}</td>
-                        <td>{{ moment(eventFrame.StartTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
-                        {% if eventFrame.EndTimestamp %}
-                            <td>{{ moment(eventFrame.EndTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
-                        {% else %}
-                            <td></td>
-                        {% endif %}
+        <div>
+            Toggle Column:
+            <button type = "button" class = "btn btn-primary btn-xs" id = "buttonHideAllColumns">Hide All</button>
+            {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
+                {% set dataColumnIndex = loop.index + 4 %}
+                <button type = "button" class = "btn btn-primary btn-xs" data-columnIndex = "{{ dataColumnIndex }}"
+                    id = "buttonToggleColumn{{ eventFrameAttributeTemplate.Name }}">{{ eventFrameAttributeTemplate.Name }}</button>
+            {% endfor %}
+            <button type = "button" class = "btn btn-primary btn-xs" id = "buttonShowAllColumns">Show All</button>
+            <br><br>
+        </div>
+        <div id = "divLoading" class = "text-center">
+            <img src = '{{ url_for("static", filename = "images/loading.gif") }}'>
+        </div>
+        <div>
+            <table id = "table" class = "table table-hover" style = "display:none">
+                <thead>
+                    <tr>
+                        <th>Event Frame Id</th>
+                        <th>Name</th>
+                        <th>Element</th>
+                        <th id = "thStartTimestamp">Start</th>
+                        <th id = "thEndTimestamp">End</th>
                         {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
-                            <td>{{ eventFrame[eventFrameAttributeTemplate.Name] }}</td>
+                            <th>{{ eventFrameAttributeTemplate.Name }}</th>
                         {% endfor %}
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-{% endif %}
+                </thead>
+                <tbody>
+                    {% for eventFrame in eventFrames %}
+                        <tr class = "trEventFrame" eventFrameId = "{{ eventFrame.EventFrameId }}">
+                            <td>{{ eventFrame.EventFrameId }}</td>
+                            <td>{{ eventFrame.Name }}</td>
+                            <td>{{ eventFrame.ElementName }}</td>
+                            <td>{{ moment(eventFrame.StartTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
+                            {% if eventFrame.EndTimestamp %}
+                                <td>{{ moment(eventFrame.EndTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
+                            {% else %}
+                                <td></td>
+                            {% endif %}
+                            {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
+                                <td>{{ eventFrame[eventFrameAttributeTemplate.Name] }}</td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block scripts %}
@@ -96,6 +94,27 @@ Event Frames
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    {% block setTabIndex %}
+            {% if not form %}
+                <script>
+                    function setTabIndex()
+                    {
+                        tabIndex = 1
+                        $('#table input').each(function()
+                        {
+                            $(this).attr("tabindex", tabIndex)
+                            tabIndex = tabIndex + 1
+                        })
+
+                        $($("ol.breadcrumb > li:not(.active) > a").get().reverse()).each(function()       
+                        {
+                            $(this).attr("tabindex", tabIndex)
+                            tabIndex = tabIndex + 1
+                        })
+                    }
+                </script>
+            {% endif %}
+    {% endblock %}
     <script>
         function setUtcTimestamps()
         {
@@ -123,10 +142,27 @@ Event Frames
         $(document).ready(function()
         {
             {% if form %}
-                $(".form-control").first().focus()
                 $("#submit").hide()
                 $("#submit").parent().append("<button class = \"btn btn-default\" id = \"buttonSearch\" title = \"Search\" type = \"submit\">" +
                     "<span class = \"glyphicon glyphicon-search\" aria-hidden = \"true\"></span></button>")
+                var tabIndex = 1
+                $("[id^=buttonMonthPicker]").each(function()
+                {
+                    $(this).attr("tabindex", tabIndex)
+                    tabIndex = tabIndex + 1
+                })
+
+                $("#startTimestamp").attr("tabindex", tabIndex)
+                tabIndex = tabIndex + 1
+                $("#endTimestamp").attr("tabindex", tabIndex)
+                tabIndex = tabIndex + 1
+                $("#buttonSearch").attr("tabindex", tabIndex)
+                tabIndex = tabIndex + 1
+                $($("ol.breadcrumb > li:not(.active) > a").get().reverse()).each(function()       
+                {
+                    $(this).attr("tabindex", tabIndex)
+                    tabIndex = tabIndex + 1
+                })
             {% endif %}
 
             $("#table thead tr").clone(true).appendTo("#table thead")
@@ -307,8 +343,15 @@ Event Frames
                 }
             })
 
-            // Clear any left over filtering from state saving.
-            table.search("").columns().search("").draw()
+            {% if not form %}
+                // Clear any left over filtering from state saving.
+                table.search("").columns().search("").draw()
+                table.on("draw.dt", function()
+                {
+                    setTabIndex()
+                })
+                setTabIndex()
+            {% endif %}
         })
     </script>
 {% endblock %}
