--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -1,107 +1,121 @@
 {% extends "base.html" %}
 
-{% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}
-Tags
-{% endblock %}
+{% block title %}Tags{% endblock %}
 
 {% block page_content %}
-<div>
-    <ol class = "breadcrumb">
-        {% if childrenClass == "Enterprise" %}
-            <li class = "active"><span class = "glyphicon glyphicon-home"></span></li>
-            {% set pageHeaderSubText = "Enterprises" %}
-        {% elif childrenClass == "Site" %}
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></span></a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set pageHeaderSubText = "Sites" %}
-        {% elif childrenClass == "Area" %}
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></span></a></li>
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Enterprise",
-                selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set pageHeaderSubText = "Areas" %}
-        <!-- "and parent" checks for systems that have not been configured with an area yet. -->
-        {% elif childrenClass == "Tag" and parent %}
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></span></a></li>
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Enterprise",
-                selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Site",
-                selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set pageHeaderSubText = "" %}
+    <div>
+        <ol class = "breadcrumb">
+            {% if childrenClass == "Enterprise" %}
+                <li class = "active"><span class = "glyphicon glyphicon-home"></span></li>
+                {% set pageHeaderSubText = "Enterprises" %}
+            {% elif childrenClass == "Site" %}
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+                <li class = "active">
+                    <a title = "Previous" href = '{{ url_for("tags.selectTag", selectedClass = "Enterprise", selectedId = parent.previous().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-left"></span></a>
+                    <a title = "Next" href = '{{ url_for("tags.selectTag", selectedClass = "Enterprise", selectedId = parent.next().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-right"></span></a>    
+                    {{ parent.Name }}
+                </li>
+                {% set pageHeaderSubText = "Sites" %}
+            {% elif childrenClass == "Area" %}
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Enterprise",
+                    selectedId = parent.Enterprise.id()) }}'>{{ parent.Enterprise.Name }}</a></li>
+                <li class = "active">
+                    <a title = "Previous" href = '{{ url_for("tags.selectTag", selectedClass = "Site", selectedId = parent.previous().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-left"></span></a>
+                    <a title = "Next" href = '{{ url_for("tags.selectTag", selectedClass = "Site", selectedId = parent.next().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-right"></span></a>    
+                    {{ parent.Name }}
+                </li>
+                {% set pageHeaderSubText = "Areas" %}
+            <!-- "and parent" checks for systems that have not been configured with an area yet. -->
+            {% elif childrenClass == "Tag" and parent %}
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Enterprise",
+                    selectedId = parent.Site.Enterprise.id()) }}'>{{ parent.Site.Enterprise.Name }}</a></li>
+                <li><a href = '{{ url_for("tags.selectTag", selectedClass = "Site",
+                    selectedId = parent.Site.id()) }}'>{{ parent.Site.Name }}</a></li>
+                <li class = "active">
+                    <a title = "Previous" href = '{{ url_for("tags.selectTag", selectedClass = "Area", selectedId = parent.previous().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-left"></span></a>
+                    <a title = "Next" href = '{{ url_for("tags.selectTag", selectedClass = "Area", selectedId = parent.next().id()) }}'>
+                        <span class = "glyphicon glyphicon-arrow-right"></span></a>
+                    {{ parent.Name }}
+                </li>
+                {% set pageHeaderSubText = "" %}
+            {% endif %}
+        </ol>
+    </div>
+    <div class = "page-header">
+        <h1>Tags <small>{{ pageHeaderSubText }}</small></h1>
+    </div>
+    <div>
+        {% if childrenClass == "Tag" and parent and current_user.isAdministrator() %}
+            <a class = "btn btn-default" title = "Add Tag" href = '{{ url_for("tags.addTag", areaId = parent.id()) }}' role = "button">
+                <span class = "glyphicon glyphicon-plus"></span></a>
+            <a class = "btn btn-default" title = "Add Lookup Tag" href = '{{ url_for("tags.addTag", areaId = parent.id(), lookup = True) }}' role = "button">
+                <span class = "glyphicon glyphicon-plus"></span> Lookup</a>
+            <br><br>
         {% endif %}
-    </ol>
-</div>
-<div class = "page-header">
-    <h1>Tags <small>{{ pageHeaderSubText }}</small></h1>
-</div>
-<div>
-    {% if childrenClass == "Tag" and parent and current_user.isAdministrator() %}
-        <a class = "btn btn-default" title = "Add Tag" href = "{{ url_for("tags.addTag", areaId = parent.id()) }}" role = "button">
-            <span class = "glyphicon glyphicon-plus"></span></a>
-        <a class = "btn btn-default" title = "Add Lookup Tag" href = "{{ url_for("tags.addTag", areaId = parent.id(), lookup = True) }}" role = "button">
-            <span class = "glyphicon glyphicon-plus"></span> Lookup</a>
-        <br><br>
-    {% endif %}
-    <table id = "tagsTable" class = "table table-hover" style = "display:none">
-        <thead>
-            <tr>
-                <th></th>
-                <th></th>
-                <th>Name</th>
-                <th>Description</th>
-                {% if childrenClass == "Tag" %}
-                    <th>Lookup</th>
-                    <th>Unit</th>
-                    <th>Managed</th>
-                    <th>Referenced</th>
-                {% endif %}
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% if children %}
-                {% for child in children %}
-                    <tr>
-                        {% if childrenClass == "Tag" %}
-                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues",
-                                tagId = child.TagId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ "TagValuesGraph" | grafanaUrl({"tagId": child.TagId}) }}"
-                                target = "_blank"><span class = "glyphicon glyphicon-stats"></span></a></td>
-                        {% else %}
-                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
-                                selectedId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                            <td></td>
-                        {% endif %}
-                        <td>{{ child.Name }}</td>
-                        <td>{{ child.Description }}</td>
-                        {% if childrenClass == "Tag" %}
-                            <td>{{ "" if child.LookupName is none else child.LookupName }}</td>
-                            <td>{{ "" if child.Unit is none else child.Unit }}</td>
-                            <td>{{ child.Managed | yesNo }}</td>
-                            <td>{{ child.Referenced | yesNo }}</td>
-                            {% if current_user.isAdministrator() and child.Managed == false %}
-                                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tags.editTag", tagId = child.TagId) }}">
-                                    <span class = "glyphicon glyphicon-edit"></span></a></td>
-                                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tags.deleteTag", tagId = child.TagId) }}",
-                                    data-type = "tag", data-name = "{{ child.Name }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
+        <table id = "tagsTable" class = "table table-hover" style = "display:none">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    {% if childrenClass == "Tag" %}
+                        <th>Lookup</th>
+                        <th>Unit</th>
+                        <th>Managed</th>
+                        <th>Referenced</th>
+                    {% endif %}
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% if children %}
+                    {% for child in children %}
+                        <tr>
+                            {% if childrenClass == "Tag" %}
+                                <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("tagValues.listTagValues",
+                                    tagId = child.TagId) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
+                                <td><a class = "btn btn-default" title = "Grafana" href = '{{ "TagValuesGraph" | grafanaUrl({"tagId": child.TagId}) }}'
+                                    target = "_blank"><span class = "glyphicon glyphicon-stats"></span></a></td>
+                            {% else %}
+                                <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
+                                    selectedId = child.id()) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
+                                <td></td>
+                            {% endif %}
+                            <td>{{ child.Name }}</td>
+                            <td>{{ child.Description }}</td>
+                            {% if childrenClass == "Tag" %}
+                                <td>{{ "" if child.LookupName is none else child.LookupName }}</td>
+                                <td>{{ "" if child.Unit is none else child.Unit }}</td>
+                                <td>{{ child.Managed | yesNo }}</td>
+                                <td>{{ child.Referenced | yesNo }}</td>
+                                {% if current_user.isAdministrator() and child.Managed == false %}
+                                    <td><a class = "btn btn-default" title = "Edit" href = '{{ url_for("tags.editTag", tagId = child.TagId) }}'>
+                                        <span class = "glyphicon glyphicon-edit"></span></a></td>
+                                    <td><a class = "btn btn-default" title = "Delete" href = '{{ url_for("tags.deleteTag", tagId = child.TagId) }}',
+                                        data-type = "tag", data-name = "{{ child.Name }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
+                                {% else %}
+                                    <td></td>
+                                    <td></td>
+                                {% endif %}
                             {% else %}
                                 <td></td>
                                 <td></td>
                             {% endif %}
-                        {% else %}
-                            <td></td>
-                            <td></td>
-                        {% endif %}
-                    </tr>
-                {% endfor %}
-            {% endif %}
-        </tbody>
-    </table>
-</div>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
 
 {% block scripts %}
@@ -109,6 +123,9 @@ Tags
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/>
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    {% block setTabIndex %}
+        {{ super() }}
+    {% endblock %}
     <script>
         $(document).ready(function()
         {
@@ -176,6 +193,11 @@ Tags
 
             // Clear any left over filtering from state saving.
             table.search("").columns().search("").draw()
+            table.on("draw.dt", function()
+            {
+                setTabIndex()
+            })
+            setTabIndex()
         })
     </script>
 {% endblock %}
